--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.5.0",
     "@date-io/date-fns": "^1.3.13",
     "@drizzle/react-plugin": "^1.5.3",
     "@drizzle/store": "^1.5.3",
